--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "express-promise-router": "^3.0.3",
     "knex": "^0.16.3",
+    "pg": "^7.8.2",
     "sqlite3": "^4.0.6"
   }
 }
