--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
+    "bcrypt": "^3.0.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
+    "jsonwebtoken": "^8.5.0",
     "knex": "^0.16.3",
     "pg": "^7.8.2",
     "sqlite3": "^4.0.6"
